# streamlit_apps

./: .dockerignore  Dockerfile  README.md  main.py  mergepdf.py  pyproject.toml  tests.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  snyk-security.yml
src/: helpers.py  test_helpers.py
