[project]
name = "streamlit-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "duckdb>=1.3.2",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "streamlit>=1.47.1",
]
